# cardiff

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  REQUIREMENTS.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cardiff/: cardiff.py  pyproject.toml
cardiff/docs/: cli-quickstart.md  render-pipeline.md  template-authoring.md  validation-contract.md
cardiff/src/cardiff/: __init__.py  __main__.py  cli.py  paths.py
cardiff/src/cardiff/contract/: __init__.py  errors.py  loaders.py  models.py  sanitization.py  validation.py
cardiff/src/cardiff/rendering/: __init__.py  directives.py  models.py  pipeline.py  templates.py  tex.py
cardiff/src/cardiff/templates/business-card/: card.tex  manifest.json
cardiff/tests/: conftest.py
cardiff/tests/cli/: test_cli.py
cardiff/tests/contract/: test_models.py  test_security.py  test_validation.py
cardiff/tests/fixtures/approved-assets/: README.md
cardiff/tests/fixtures/approved-samples/business-card/: README.md  reference-evidence.json
cardiff/tests/fixtures/requests/: invalid-request-missing-email.yaml  valid-request.json  valid-request.yaml
cardiff/tests/rendering/: test_determinism.py  test_directives.py  test_pipeline.py  test_template_resolution.py
docs/: version-0-0-2-docs.md  version-0-0-3-docs.md  version-0-0-4-docs.md  version-0-1-0-docs.md  version-0-1-1-docs.md  version-0-1-2-docs.md  version-0-1-3-docs.md  version-0-1-4-docs.md  version-0-1-5-docs.md  version-0-1-6-docs.md  version-0-1-7-docs.md
learn/: unit-001-bolt-001a-study-guide.md
