[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiff"
version = "0.1.1"
description = "Business cards as code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6,<7",
    "segno>=1.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cardiff = "cardiff.cli:main"
